--- a/staticfiles/styles/cryptoden-style.css
+++ b/staticfiles/styles/cryptoden-style.css
@@ -31,6 +31,10 @@ a{
   color: #424242;
 }
 
+a:hover{
+  color: blueviolet;
+}
+
 /* NAVBAR STYLING START */
 .navbar{
   margin-top: 1%;
@@ -38,7 +42,6 @@ a{
   margin-right: 1%;
   background-color: #fafdff;
   padding: 10px 10px;
-  transition: all 0.4s ease;
   border-bottom: 1px solid #a8aaab;
 }
 
@@ -47,50 +50,27 @@ a{
   font-weight: 600;
 }
 
-.nav-item{
-  cursor: pointer;
-}
-
-.signupBtn {
-  color: #14133d;
-}
-
-.navbar.sticky{
-  background-color: #14133d;
-  padding: 5px 20px;
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
-.navbar.sticky .menu-list .nav-item{
-  box-shadow: none;
-}
-
-.navbar.sticky li a{
-  color: white;
-}
-
-.navbar.sticky .logo a{
-  color: white;
-}
-
 .menu-list li{
   padding: 0px 10px;
 }
 
 .menu-list li a{
   color: black;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 400;
 }
-  
-.menu-list li a:hover{
-  color: silver;
+
+#signupBtn, #logoutBtn{
+  background-color: #d3d4d5;
+}
+#logoutBtn:hover,
+#signupBtn:hover{
+  transition: all 0.2s ease;
+  background-color: #eaeaea;
 }
 
 .navbar .logo a{
-  color: white;
-  font-size: 28px;
-  font-weight: 500;
+  text-decoration: none;
 }
 
 .icon{
@@ -99,11 +79,7 @@ a{
   display: none;
 }
 
-.navbar.sticky .icon{
-  color: white;
-}
-
-.icon.cancel-btn{
+.icon.cross-btn{
   position: absolute;
   right: 30px;
   top: 20px;
@@ -111,45 +87,28 @@ a{
 
 @media (max-width: 568px) {
   .navbar .menu-list{
+    z-index: 2;
     position: fixed;
     top: -0.1%;
     right: -100%;
     width: 100%;
-    max-width: 160px;
-    max-height: 110px;
+    max-width: 110px;
+    max-height: 210px;
     display: block;
     padding: 15px 0;
     text-align: center;
-    background-color: #14133d;
+    background-color: #fafdff;
     transition: all 0.2s ease;
-  }
-
-  .menu-list .nav-item{
-    border-radius: none;
-    box-shadow: none;
+    border: 1px solid #a8aaab;
   }
 
   .icon{
-    color: white;
+    color: black;
     display: block;
   }
 
   .icon.hide{
     display: none;
-  }
-
-  .navbar.active{
-    background-color: #14133d;
-    transition: all 0.2s ease;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-  }
-
-  .navbar.active .icon{
-    color: white;
-  }
-
-  .navbar.active .logo a{
-    color: white;
   }
 
   .navbar .menu-list.active{
@@ -159,17 +118,13 @@ a{
   .navbar .menu-list li{
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 50px;
   }
 
   .navbar .menu-list li a{
-    color: white;
+    padding: 8px 10px;
     margin-left: 0px;
-    font-size: 16px;
-  }
-  
-  .menu-list li a:hover{
-    color: silver;
+    font-size: 14px;
   }
 }
 /* NAVBAR STYLING END */
@@ -179,7 +134,7 @@ a{
   margin-left: 1%;
   margin-right: 1%;
   padding-bottom: 2%;
-  background-size: cover;
+  background-size: contain;
 }
 
 .card-main {
@@ -229,11 +184,27 @@ a{
 
 /* Signin page STYLING */
 .pattern-signin{
-  height: 75vh;
   margin-left: 1%;
   margin-right: 1%;
   padding-bottom: 2%;
-  background-size: cover;
+  background-size: contain;
+}
+
+.mb-signin{
+  margin-bottom: 36%;
+}
+
+@media (max-width: 568px) {
+  .mb-signin{
+    margin-bottom: 31%;
+  }
+  .mt-signin{
+    margin-top: 26%;
+  }
+}
+
+.mb-register{
+  margin-bottom: 30%;
 }
 
 .card-signin{
