--- a/templates/cryptoden_main.html
+++ b/templates/cryptoden_main.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/76d03bfb37.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'styles/cryptoden-style.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/cryptoden.css' %}">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <title>Textual Cryptography</title>
 </head>
@@ -16,11 +16,11 @@
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
             <div class="logo"><a href="{% url 'cryptoden:crypto-main' %}"><h2>Textual Cryptography</h2></a></div>
-            <ul class="menu-list navbar-nav">
+            {% comment %} <ul class="menu-list navbar-nav">
                 <div class="icon cross-btn">
                     <i class="fas fa-times"></i>
                 </div>
-                {% comment %} {% if request.user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                 <li class="nav-item">
                     <a class="btn btn-light nav-link" href="{% url 'cryptoden:crypto-account' %}">Account</a>
                 </li>
@@ -36,11 +36,11 @@
                 <li class="nav-item">
                     <a id="signupBtn" class="btn btn-light nav-link" href="{% url 'cryptoden:crypto-register' %}">Sign up</a>
                 </li>
-                {% endif %} {% endcomment %}
+                {% endif %}
             </ul>
             <div class="icon menu-btn">
                 <i class="fas fa-bars"></i>
-            </div>
+            </div> {% endcomment %}
         </div>
     </nav>
     {% if messages %}
@@ -60,9 +60,9 @@
             <div class="row">
                 <div class="col-md">
                     <div class="social-list m-4">
-                        <a href="{{profile.social_linkedin}}" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-                        <a href="{{profile.social_github}}" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
-                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Developed by <a href="https://msrezaie.pythonanywhere.com/" target="_blank">MSREZAIE</a></a>
+                        <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Developed by <a href="#" target="_blank">MSREZAIE</a></a>
                     </div>
                 </div>
             </div>
