fixed broken urls

--- a/templates/cryptoden_main.html
+++ b/templates/cryptoden_main.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
             <div class="logo"><a href="{% url 'cryptoden:crypto-main' %}"><h2>Textual Cryptography</h2></a></div>
-            {% comment %} <ul class="menu-list navbar-nav">
+            <ul class="menu-list navbar-nav">
                 <div class="icon cross-btn">
                     <i class="fas fa-times"></i>
                 </div>
@@ -40,7 +40,7 @@
             </ul>
             <div class="icon menu-btn">
                 <i class="fas fa-bars"></i>
-            </div> {% endcomment %}
+            </div>
         </div>
     </nav>
     {% if messages %}
@@ -60,9 +60,9 @@
             <div class="row">
                 <div class="col-md">
                     <div class="social-list m-4">
-                        <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-                        <a href="#"><i class="fa-brands fa-square-github fa-2xl"></i></a>
-                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Developed by <a href="#" target="_blank">MSREZAIE</a></a>
+                        <a href="https://www.linkedin.com/in/msrezaie/"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href="https://github.com/msrezaie"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+                        <p class="mt-3">Copyright ©{% now 'Y' %} All rights reserved. Developed by <a href="https://msrezaie.up.railway.app/" target="_blank">MSREZAIE</a></a>
                     </div>
                 </div>
             </div>
