initial user authentication implemented

--- a/cryptoden/templates/cryptoden/index.html
+++ b/cryptoden/templates/cryptoden/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="col-2 text-center">
                         <div class="">
-                            <h3>v</h3>
+                            <h4><i>work in progress</i></h4>
                         </div>
                     </div>
                 </div>
